# selfee_test_technique

./: .env.example  LICENCE  README.md  docker-compose.yml
PokemonAPI/: .gitignore  Dockerfile  README.md  pyproject.toml
PokemonAPI/app/api/: urls.py  views.py
PokemonAPI/app/config/: settings.py  urls.py
SecurePokeAPI/: .gitignore  Dockerfile  README.md  pyproject.toml  test_users.json
SecurePokeAPI/app/api/: urls.py  views.py
SecurePokeAPI/app/api/management/commands/: create_users.py
SecurePokeAPI/app/config/: settings.py  urls.py
SecurePokeAPI/app/tests/commands/: test_create_user.py
testeur/: pyproject.toml
testeur/src/: test_runner.py
