[tool.poetry]
name = "testeur api"
version = "0.0.1"
description = ""
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
packages = [{ include = "src" }]



[project]
name = "testeur"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.0"
pytest = "^8.0.0"
pydentic = "^0.0.1.dev3"
pydantic = "^2.11.7"
